--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
     "react": "^18.2.0",
+    "react-currency-input": "^1.3.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
