--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
+    "nodemon": "^3.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-currency-input": "^1.3.2",
     "react-dom": "^18.2.0",
